fix(layout): make quotation visible again

--- a/source/stylesheets/timeline/snippets/_gallery.scss
+++ b/source/stylesheets/timeline/snippets/_gallery.scss
@@ -36,7 +36,7 @@
       content: '\201C';
       display: block;
       position: absolute;
-      top: .5em;
+      top: -.5em;
       left: 0;
       width: 100%;
       font-size: 5em;
